erDiagram
    organizations {
        uuid id PK
        string name
        timestamp created_at
        timestamp updated_at
    }

    users {
        uuid id PK
        string email
        string password_hash
        timestamp created_at
        timestamp updated_at
    }

    organization_members {
        uuid id PK
        uuid organization_id FK
        uuid user_id FK
        string role
    }

    projects {
        uuid id PK
        uuid organization_id FK
        string name
        string description
        timestamp created_at
        timestamp updated_at
    }

    queues {
        uuid id PK
        uuid project_id FK
        string name
        int concurrency_limit
        string retry_strategy
        int max_attempts
        boolean is_paused
        timestamp created_at
        timestamp updated_at
    }

    jobs {
        uuid id PK
        uuid queue_id FK
        string type
        jsonb payload
        string status
        int priority
        int attempts
        timestamp available_at
        uuid worker_id FK
        timestamp created_at
        timestamp updated_at
    }

    job_executions {
        uuid id PK
        uuid job_id FK
        uuid worker_id FK
        string status
        text error
        timestamp started_at
        timestamp completed_at
    }

    job_logs {
        uuid id PK
        uuid job_id FK
        uuid execution_id FK
        string level
        text message
        timestamp created_at
    }

    dlq_entries {
        uuid id PK
        uuid original_job_id
        uuid queue_id FK
        string type
        jsonb payload
        text error
        timestamp created_at
    }

    job_schedules {
        uuid id PK
        uuid queue_id FK
        string name
        string cron_expression
        string timezone
        string job_type
        jsonb job_payload
        boolean is_paused
        timestamp last_run_at
        timestamp next_run_at
        timestamp created_at
        timestamp updated_at
    }

    workers {
        uuid id PK
        uuid organization_id FK
        string hostname
        string version
        timestamp created_at
        timestamp updated_at
    }

    worker_heartbeats {
        uuid id PK
        uuid worker_id FK
        timestamp last_heartbeat_at
        jsonb active_queues
        float cpu_usage
        float memory_usage
    }

    organizations ||--o{ organization_members : has
    users ||--o{ organization_members : belongs_to
    organizations ||--o{ projects : owns
    organizations ||--o{ workers : owns
    projects ||--o{ queues : contains
    queues ||--o{ jobs : processes
    queues ||--o{ dlq_entries : produces
    queues ||--o{ job_schedules : configures
    jobs ||--o{ job_executions : logs
    jobs ||--o{ job_logs : records
    workers ||--o| worker_heartbeats : emits
    workers ||--o{ jobs : claims
    workers ||--o{ job_executions : performs
